src/objects/Virtual_Card_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Loan_Payment_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Payment Transaction</label>
        <referenceTo>loan__Loan_Payment_Transaction__c</referenceTo>
        <relationshipLabel>Virtual Card Payments</relationshipLabel>
        <relationshipName>Virtual_Card_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Amount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>REFUND</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Virtual_Card__c</fullName>
        <label>Virtual Card</label>
        <referenceTo>Virtual_Card__c</referenceTo>
        <relationshipLabel>Virtual Card Payments</relationshipLabel>
        <relationshipName>Virtual_Card_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Virtual Card Payment</label>
    <nameField>
        <displayFormat>VCP-{000000000}</displayFormat>
        <label>Virtual Card Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Virtual Card Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>